--- a/app/src/main/res/layout/activity_publish_picture_text.xml
+++ b/app/src/main/res/layout/activity_publish_picture_text.xml
@@ -11,8 +11,9 @@
         android:layout_height="150dp"
         android:background="@null"
         android:gravity="top|left"
-        android:hint="说点什么吧（150个字）"
+        android:hint="说点什么吧（300个字）"
         android:lineSpacingExtra="@dimen/dp4"
+        android:maxLength="300"
         android:padding="@dimen/dp10"
         android:textColor="@color/color_333333"
         android:textColorHint="@color/color_999999"
