--- a/app/src/main/res/layout/activity_publish_video.xml
+++ b/app/src/main/res/layout/activity_publish_video.xml
@@ -63,8 +63,9 @@
             android:layout_below="@+id/activity_note_rl_two"
             android:background="@null"
             android:gravity="left|top"
-            android:hint="说点什么吧（150个字）"
+            android:hint="说点什么吧（300个字）"
             android:lineSpacingExtra="@dimen/dp4"
+            android:maxLength="300"
             android:padding="@dimen/dp10"
             android:textColor="@color/color_333333"
             android:textColorHint="@color/color_999999"
