--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -31,7 +31,7 @@
             android:layout_centerInParent="true"
             android:background="@drawable/shape_btn_mine_login_btn"
             android:gravity="center"
-            android:text="登陆/注册"
+            android:text="登录/注册"
             android:textColor="#fff"
             android:textSize="18sp"
             android:visibility="gone" />
