--- a/app/src/main/res/layout/fragment_talent_homepage.xml
+++ b/app/src/main/res/layout/fragment_talent_homepage.xml
@@ -37,7 +37,6 @@
                     android:layout_below="@id/talentHeadImg"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp10"
-                    android:text="1111"
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp_14"
                     android:textStyle="bold" />
@@ -49,7 +48,6 @@
                     android:layout_below="@id/talentNickNameTxt"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp10"
-                    android:text="2222"
                     android:textColor="@color/color_666666" />
 
             </RelativeLayout>
@@ -80,7 +78,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="title"
                         android:textColor="@color/color_333333"
                         android:textSize="@dimen/sp_16" />
 
@@ -105,17 +102,39 @@
             android:layout_height="0.75dp"
             android:background="@color/color_dadada" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/homePageTabLayout"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/color_ffffff"
-            app:tabIndicatorColor="@color/color_e80036"
-            app:tabIndicatorHeight="@dimen/dp2"
-            app:tabSelectedTextColor="@color/color_333333"
-            app:tabTextAppearance="@style/TabLayoutTextSize"
-            app:tabTextColor="@color/color_999999" />
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
+                android:id="@+id/homePageTabLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp45"
+                android:layout_gravity="center_horizontal"
+                app:pstsDividerColor="@android:color/transparent"
+                app:pstsIndicatiorWidth="@dimen/dp30"
+                app:pstsIndicatorColor="@color/color_ff5555"
+                app:pstsIndicatorHeight="2dp"
+                app:pstsTabPaddingLeftRight="@dimen/dp10"
+                app:pstsTextColor="@color/color_666666"
+                app:selectedTabTextColor="@color/color_ff5555" />
+        </LinearLayout>
+
+
+        <!--<android.support.design.widget.TabLayout-->
+        <!--android:id="@+id/homePageTabLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:background="@color/color_ffffff"-->
+        <!--app:tabIndicatorColor="@color/color_e80036"-->
+        <!--app:tabIndicatorHeight="@dimen/dp2"-->
+        <!--app:tabSelectedTextColor="@color/color_333333"-->
+        <!--app:tabTextAppearance="@style/TabLayoutTextSize"-->
+        <!--app:tabTextColor="@color/color_999999" />-->
 
 
         <View
