--- a/app/src/main/res/layout/fragment_talent_mine.xml
+++ b/app/src/main/res/layout/fragment_talent_mine.xml
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/talentMineSettingImg"
-            android:layout_width="@dimen/dp25"
-            android:layout_height="@dimen/dp25"
+            android:layout_width="@dimen/dp20"
+            android:layout_height="@dimen/dp20"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp15"
@@ -29,8 +29,8 @@
 
         <ImageView
             android:id="@+id/talentMineMsgImg"
-            android:layout_width="@dimen/dp25"
-            android:layout_height="@dimen/dp25"
+            android:layout_width="@dimen/dp20"
+            android:layout_height="@dimen/dp20"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp15"
@@ -39,8 +39,8 @@
 
         <ImageView
             android:id="@+id/talentMineEditImg"
-            android:layout_width="@dimen/dp25"
-            android:layout_height="@dimen/dp25"
+            android:layout_width="@dimen/dp20"
+            android:layout_height="@dimen/dp20"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp15"
             android:layout_toLeftOf="@id/talentMineMsgImg"
@@ -89,7 +89,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/shape_btn_mine_login_btn"
                     android:gravity="center"
-                    android:text="登陆/注册"
+                    android:text="登录/注册"
                     android:textColor="#fff"
                     android:textSize="18sp"
                     android:visibility="gone" />
@@ -104,17 +104,39 @@
 
             </RelativeLayout>
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/talentMinePagerSlidingTabStrip"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/color_ffffff"
-                app:tabIndicatorColor="@color/color_e80036"
-                app:tabIndicatorHeight="@dimen/dp2"
-                app:tabSelectedTextColor="@color/color_333333"
-                app:tabTextAppearance="@style/TabLayoutTextSize"
-                app:tabTextColor="@color/color_999999" />
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
+                    android:id="@+id/talentMinePagerSlidingTabStrip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dp45"
+                    android:layout_gravity="center_horizontal"
+                    app:pstsDividerColor="@android:color/transparent"
+                    app:pstsIndicatiorWidth="@dimen/dp30"
+                    app:pstsIndicatorColor="@color/color_ff5555"
+                    app:pstsIndicatorHeight="2dp"
+                    app:pstsTabPaddingLeftRight="@dimen/dp10"
+                    app:pstsTextColor="@color/color_666666"
+                    app:selectedTabTextColor="@color/color_ff5555" />
+            </LinearLayout>
+
+            <!--<android.support.design.widget.TabLayout-->
+            <!--android:id="@+id/"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:background="@color/color_ffffff"-->
+            <!--app:tabIndicatorColor="@color/color_e80036"-->
+            <!--app:tabIndicatorHeight="@dimen/dp2"-->
+            <!--app:tabSelectedTextColor="@color/color_333333"-->
+            <!--app:tabTextAppearance="@style/TabLayoutTextSize"-->
+            <!--app:tabTextColor="@color/color_999999" />-->
 
         </android.support.design.widget.AppBarLayout>
 
