--- a/app/src/main/res/layout/view_item_dynamic.xml
+++ b/app/src/main/res/layout/view_item_dynamic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -41,7 +42,8 @@
 
     </RelativeLayout>
 
-    <TextView
+
+    <com.xkh.hzp.xkh.view.FolderTextView
         android:id="@+id/dynamicContentTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,9 +51,10 @@
         android:layout_marginRight="@dimen/dp15"
         android:ellipsize="end"
         android:lineSpacingExtra="@dimen/dp6"
-        android:lines="3"
+        android:maxLines="3"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_16" />
+        android:textSize="@dimen/sp_16"
+        app:tailTextColor="@color/color_ff5555" />
 
     <LinearLayout
         android:id="@+id/dynamicImgContentLayout"
@@ -91,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp6"
-                android:text="分享"
+                android:text="转发"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_12" />
 
