--- a/app/src/main/res/layout/view_item_video_dynamic.xml
+++ b/app/src/main/res/layout/view_item_video_dynamic.xml
@@ -48,7 +48,7 @@
         android:layout_marginRight="@dimen/dp15"
         android:ellipsize="end"
         android:lineSpacingExtra="@dimen/dp6"
-        android:lines="3"
+        android:maxLines="3"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_16" />
 
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp4"
-                android:text="分享"
+                android:text="转发"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_12" />
 
