--- a/common-library/src/main/res/layout/item_talent_header.xml
+++ b/common-library/src/main/res/layout/item_talent_header.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/talentHeadItemImg"
         android:layout_width="@dimen/dp60"
-        android:layout_height="@dimen/dp60" />
+        android:layout_height="@dimen/dp60"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/talentTypeTxt"
