--- a/app/src/main/res/layout/activity_join_talent.xml
+++ b/app/src/main/res/layout/activity_join_talent.xml
@@ -50,6 +50,7 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
+                android:inputType="phone"
                 android:text="联系电话："
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_15" />
@@ -61,6 +62,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/shape_edit_join_us"
+                android:inputType="phone"
                 android:maxLength="11"
                 android:paddingLeft="@dimen/dp4"
                 android:textColor="@color/color_666666"
@@ -123,6 +125,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/shape_edit_join_us"
                 android:hint="单位cm"
+                android:inputType="numberDecimal"
                 android:paddingLeft="@dimen/dp4"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_15" />
@@ -154,21 +157,38 @@
                 android:layout_weight="1"
                 android:background="@drawable/shape_edit_join_us"
                 android:hint="单位kg"
+                android:inputType="numberDecimal"
                 android:paddingLeft="@dimen/dp4"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_15" />
 
         </LinearLayout>
 
-        <GridView
-            android:id="@+id/joinTalentGridView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp15"
             android:layout_marginRight="@dimen/dp15"
-            android:layout_marginTop="@dimen/dp20"
-            android:numColumns="4"
-            android:verticalSpacing="@dimen/dp10" />
+            android:layout_marginTop="@dimen/dp15"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="添加照片："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_15" />
+
+            <GridView
+                android:id="@+id/joinTalentGridView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="3"
+                android:verticalSpacing="@dimen/dp10" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/joinUsSubmitBtn"
