--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
 
             <Button
                 android:id="@+id/activity_login_getyzm"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/sl_btn_red"
                 android:gravity="center"
