--- a/app/src/main/res/layout/view_item_talent.xml
+++ b/app/src/main/res/layout/view_item_talent.xml
@@ -28,6 +28,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp15"
             android:layout_toRightOf="@id/talentHeadImg"
+            android:ellipsize="end"
+            android:maxLength="20"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_16" />
 
@@ -53,7 +55,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="center_horizontal"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/shape_place_holder" />
 
     <com.zhy.view.flowlayout.TagFlowLayout
