--- a/app/src/main/res/layout/activity_modify_pwd.xml
+++ b/app/src/main/res/layout/activity_modify_pwd.xml
@@ -12,6 +12,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
         android:background="@null"
+        android:digits="@string/digits"
         android:hint="请输入原密码"
         android:inputType="textPassword"
         android:textSize="15sp" />
@@ -32,6 +33,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
         android:background="@null"
+        android:digits="@string/digits"
         android:hint="请输入6-16位新密码"
         android:inputType="textPassword"
         android:textSize="15sp" />
@@ -52,6 +54,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
         android:background="@null"
+        android:digits="@string/digits"
         android:hint="请再次输入新密码"
         android:inputType="textPassword"
         android:textSize="15sp" />
