--- a/app/src/main/res/layout/activity_search_history.xml
+++ b/app/src/main/res/layout/activity_search_history.xml
@@ -36,7 +36,7 @@
                 android:background="@null"
                 android:drawablePadding="8dp"
                 android:gravity="start|center_vertical"
-                android:hint="彩妆，心得，一切关于你的美"
+                android:hint="搜索关键字及达人昵称"
                 android:imeOptions="actionSearch"
                 android:singleLine="true"
                 android:textColor="@color/color_666666"
