--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -38,14 +38,25 @@
                 android:textSize="@dimen/sp_12" />
 
 
-            <ImageView
-                android:id="@+id/msgImg"
+            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dp15"
-                android:layout_weight="0"
-                android:src="@mipmap/icon_msg_white" />
+                android:layout_marginRight="@dimen/dp15">
 
+                <ImageView
+                    android:id="@+id/msgImg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_msg_white" />
+
+                <ImageView
+                    android:id="@+id/msgDotImg"
+                    android:layout_width="@dimen/dp10"
+                    android:layout_height="@dimen/dp10"
+                    android:layout_gravity="right"
+                    android:src="@drawable/shpe_white_dot"
+                    android:visibility="gone" />
+            </FrameLayout>
 
         </LinearLayout>
 
@@ -130,6 +141,7 @@
         app:aebMainButtonRotateAnimDurationMillis="300"
         app:aebMainButtonRotateDegree="45"
         app:aebMainButtonSizeDp="40dp"
+        app:aebMaskBackgroundColor="#c8ffffff"
         app:aebRippleEffect="true"
         app:aebStartAngleDegree="90"
         app:aebSubButtonSizeDp="40dp" />
