--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -21,8 +21,7 @@
             android:layout_width="@dimen/dp75"
             android:layout_height="@dimen/dp75"
             android:layout_centerInParent="true"
-            android:scaleType="fitXY"
-            android:src="@mipmap/icon_female_selected" />
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/mineLoginTxt"
@@ -43,6 +42,8 @@
             android:layout_below="@id/userHeadImg"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dp10"
+            android:ellipsize="end"
+            android:maxLength="20"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_14"
             android:textStyle="bold" />
