--- a/app/src/main/res/layout/fragment_people_profile.xml
+++ b/app/src/main/res/layout/fragment_people_profile.xml
@@ -63,17 +63,26 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/talentSpecialtyTxt"
+            android:id="@+id/talentStyleTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp15" />
+
+        <TextView
+            android:id="@+id/talentSpecialtyTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp15"
+            android:layout_marginRight="@dimen/dp15" />
+
 
         <com.zhy.view.flowlayout.TagFlowLayout
             android:id="@+id/talentLableTagFlowLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp10"
-            android:layout_marginRight="@dimen/dp15">
+            android:layout_marginRight="@dimen/dp15"
+            android:layout_marginTop="@dimen/dp15">
 
         </com.zhy.view.flowlayout.TagFlowLayout>
 
