--- a/app/src/main/res/layout/view_item_video_dynamic.xml
+++ b/app/src/main/res/layout/view_item_video_dynamic.xml
@@ -21,6 +21,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp15"
             android:layout_toRightOf="@id/dynamicUserHeadImg"
+            android:ellipsize="end"
+            android:maxLength="20"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
 
@@ -71,6 +73,27 @@
             android:layout_height="@dimen/dp50"
             android:layout_centerInParent="true"
             android:src="@mipmap/ic_media_play" />
+
+        <TextView
+            android:id="@+id/videoPlayCountTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/videoDynamicFaceurlImg"
+            android:layout_marginBottom="@dimen/dp10"
+            android:layout_marginLeft="@dimen/dp10"
+            android:textColor="@color/color_ffffff"
+            android:textSize="@dimen/sp_12" />
+
+        <TextView
+            android:id="@+id/videoDuringTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/videoDynamicFaceurlImg"
+            android:layout_alignRight="@id/videoDynamicFaceurlImg"
+            android:layout_marginBottom="@dimen/dp10"
+            android:layout_marginRight="@dimen/dp10"
+            android:textColor="@color/color_ffffff"
+            android:textSize="@dimen/sp_12" />
 
     </RelativeLayout>
 
