--- a/common-library/src/main/res/layout/view_item_layout.xml
+++ b/common-library/src/main/res/layout/view_item_layout.xml
@@ -25,8 +25,8 @@
 
     <ImageView
         android:id="@+id/rightIconImg"
-        android:layout_width="@dimen/dp20"
-        android:layout_height="@dimen/dp20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/dp20"
