--- a/app/src/main/res/layout/activity_video_dynamic_details.xml
+++ b/app/src/main/res/layout/activity_video_dynamic_details.xml
@@ -32,8 +32,7 @@
                     android:id="@+id/userHeadImg"
                     android:layout_width="@dimen/dp40"
                     android:layout_height="@dimen/dp40"
-                    android:layout_alignParentLeft="true"
-                    android:src="@drawable/ic_launcher_round" />
+                    android:layout_alignParentLeft="true" />
 
                 <TextView
                     android:id="@+id/userNickNameTxt"
@@ -42,10 +41,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dp15"
                     android:layout_toRightOf="@id/userHeadImg"
-                    android:text="爱吃糖的羊"
                     android:textColor="@color/color_666666"
                     android:textSize="@dimen/sp_14" />
-
 
                 <TextView
                     android:id="@+id/userIsAttentionTxt"
@@ -54,10 +51,10 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/shape_attention"
-                    android:paddingBottom="@dimen/dp4"
-                    android:paddingLeft="@dimen/dp15"
-                    android:paddingRight="@dimen/dp15"
-                    android:paddingTop="@dimen/dp4"
+                    android:paddingBottom="@dimen/dp2"
+                    android:paddingLeft="@dimen/dp10"
+                    android:paddingRight="@dimen/dp10"
+                    android:paddingTop="@dimen/dp2"
                     android:text="+关注"
                     android:textColor="@color/color_ff5555" />
 
