--- a/app/src/main/res/layout/fragment_talent_mine.xml
+++ b/app/src/main/res/layout/fragment_talent_mine.xml
@@ -39,8 +39,8 @@
 
         <ImageView
             android:id="@+id/msgDotImg"
-            android:layout_width="@dimen/dp10"
-            android:layout_height="@dimen/dp10"
+            android:layout_width="@dimen/dp6"
+            android:layout_height="@dimen/dp6"
             android:layout_alignRight="@id/talentMineMsgImg"
             android:layout_alignTop="@id/talentMineMsgImg"
             android:src="@drawable/shpe_red_dot"
@@ -71,14 +71,15 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="160dp"
                 app:layout_scrollFlags="scroll|enterAlways">
 
                 <ImageView
                     android:id="@+id/mineHeadImg"
                     android:layout_width="@dimen/dp75"
                     android:layout_height="@dimen/dp75"
-                    android:layout_centerInParent="true" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp20" />
 
                 <TextView
                     android:id="@+id/mineNickNameTxt"
