--- a/app/src/main/res/layout/item_notice_message.xml
+++ b/app/src/main/res/layout/item_notice_message.xml
@@ -20,6 +20,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/noticeImg"
+        android:ellipsize="end"
         android:maxLines="2"
         android:textColor="#333333"
         android:textSize="15sp" />
