--- a/app/src/main/res/layout/view_dialog_edit.xml
+++ b/app/src/main/res/layout/view_dialog_edit.xml
@@ -22,8 +22,10 @@
             android:background="@null"
             android:hint="请输入您的评论"
             android:lineSpacingMultiplier="1.2"
+            android:maxLength="100"
             android:paddingBottom="@dimen/dp10"
             android:paddingTop="@dimen/dp4"
+            android:singleLine="true"
             android:textSize="@dimen/sp_14" />
 
         <TextView
