--- a/app/src/main/res/layout/view_item_video_dynamic.xml
+++ b/app/src/main/res/layout/view_item_video_dynamic.xml
@@ -74,26 +74,36 @@
             android:layout_centerInParent="true"
             android:src="@mipmap/ic_media_play" />
 
-        <TextView
-            android:id="@+id/videoPlayCountTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
             android:layout_alignBottom="@id/videoDynamicFaceurlImg"
-            android:layout_marginBottom="@dimen/dp10"
-            android:layout_marginLeft="@dimen/dp10"
-            android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/sp_12" />
+            android:background="#1e000000"
+            android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/videoDuringTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/videoDynamicFaceurlImg"
-            android:layout_alignRight="@id/videoDynamicFaceurlImg"
-            android:layout_marginBottom="@dimen/dp10"
-            android:layout_marginRight="@dimen/dp10"
-            android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/sp_12" />
+            <TextView
+                android:id="@+id/videoPlayCountTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="@dimen/dp10"
+                android:gravity="left"
+                android:textColor="@color/color_ffffff"
+                android:textSize="@dimen/sp_12" />
+
+            <TextView
+                android:id="@+id/videoDuringTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp10"
+                android:drawableLeft="@mipmap/icon_time_length"
+                android:drawablePadding="@dimen/dp4"
+                android:gravity="right"
+                android:textColor="@color/color_ffffff"
+                android:textSize="@dimen/sp_12" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
