--- a/common-library/src/main/res/layout/item_talent_header.xml
+++ b/common-library/src/main/res/layout/item_talent_header.xml
@@ -16,9 +16,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dp15"
+        android:layout_marginTop="@dimen/dp10"
         android:text="学院风"
         android:textColor="@color/color_333333"
-        android:textSize="15sp" />
+        android:textSize="@dimen/sp_14" />
 
 </LinearLayout>
