--- a/common-library/src/main/res/layout/view_no_data.xml
+++ b/common-library/src/main/res/layout/view_no_data.xml
@@ -10,15 +10,13 @@
         android:layout_width="90dp"
         android:layout_height="70dp"
         android:layout_marginTop="54dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_round" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/fragment_dormitory_empty_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="您的内容飞走了"
         android:textColor="#c2c2c2"
         android:textSize="18sp" />
 
