--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -35,7 +35,8 @@
                 android:background="@drawable/shape_search"
                 android:gravity="center"
                 android:text="搜索关键字及达人昵称"
-                android:textSize="@dimen/sp_12" />
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
 
 
             <FrameLayout
