--- a/app/src/main/res/layout/fragment_talent.xml
+++ b/app/src/main/res/layout/fragment_talent.xml
@@ -30,7 +30,8 @@
             android:background="@drawable/shape_search"
             android:gravity="center"
             android:text="搜索关键字及达人昵称"
-            android:textSize="@dimen/sp_12" />
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_14" />
 
     </LinearLayout>
 
