--- a/app/src/main/res/layout/item_message_comment.xml
+++ b/app/src/main/res/layout/item_message_comment.xml
@@ -29,8 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/commentUserHeadImg"
             android:layout_marginLeft="@dimen/dp10"
-            android:layout_toRightOf="@id/commentUserHeadImg"
-            android:text="aiaaiaiia" />
+            android:layout_toRightOf="@id/commentUserHeadImg" />
 
         <TextView
             android:id="@+id/commentDateTxt"
@@ -65,8 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp10"
         android:layout_marginLeft="@dimen/dp10"
-        android:layout_marginRight="@dimen/dp10"
-        android:text="回复@爱吃糖的洋：哈哈哈" />
+        android:layout_marginRight="@dimen/dp10" />
 
     <include layout="@layout/view_line_horientol" />
 
@@ -77,8 +75,7 @@
         android:layout_marginBottom="@dimen/dp10"
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
-        android:layout_marginTop="@dimen/dp10"
-        android:text=" @爱吃糖的洋:yayayya" />
+        android:layout_marginTop="@dimen/dp10" />
 
     <LinearLayout
         android:layout_width="match_parent"
