--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -75,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:visibility="gone"
-                    app:layout_scrollFlags="scroll|enterAlways" />
+                    app:layout_scrollFlags="scroll" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -97,18 +97,6 @@
                         app:pstsTextColor="@color/color_666666"
                         app:selectedTabTextColor="@color/color_ff5555" />
                 </LinearLayout>
-
-                <!--<android.support.design.widget.TabLayout-->
-                <!--android:id="@+id/dynamicTabLayout"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_alignParentBottom="true"-->
-                <!--android:background="@color/color_ffffff"-->
-                <!--app:tabIndicatorColor="@color/color_e80036"-->
-                <!--app:tabIndicatorHeight="@dimen/dp2"-->
-                <!--app:tabSelectedTextColor="@color/color_333333"-->
-                <!--app:tabTextAppearance="@style/TabLayoutTextSize"-->
-                <!--app:tabTextColor="@color/color_999999" />-->
 
             </android.support.design.widget.AppBarLayout>
 
