--- a/app/src/main/res/layout/view_item_video_dynamic.xml
+++ b/app/src/main/res/layout/view_item_video_dynamic.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -42,7 +43,7 @@
 
     </RelativeLayout>
 
-    <TextView
+    <com.xkh.hzp.xkh.view.FolderTextView
         android:id="@+id/dynamicContentTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +53,8 @@
         android:lineSpacingExtra="@dimen/dp6"
         android:maxLines="3"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_16" />
+        android:textSize="@dimen/sp_16"
+        app:tailTextColor="@color/color_ff5555" />
 
     <RelativeLayout
         android:id="@+id/dynamicImgContentLayout"
