--- a/common-library/src/main/res/values/attrs.xml
+++ b/common-library/src/main/res/values/attrs.xml
@@ -13,6 +13,8 @@
         <attr name="pstsTabBackground" format="reference" />
         <attr name="pstsShouldExpand" format="boolean" />
         <attr name="pstsTextAllCaps" format="boolean" />
+        <attr name="pstsTextSize" format="float" />
+        <attr name="pstsSelectTextSize" format="float" />
         <attr name="selectedTabTextColor" format="reference" />
         <attr name="pstsIndicatiorWidth" format="dimension" />
     </declare-styleable>
